# docbiner

./: .env.example  .env.prod.example  .gitignore  Caddyfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  go.work  go.work.sum
.github/workflows/: ci.yml  deploy.yml
cmd/cli/: go.mod  main.go
docs/plans/: 2026-03-04-docbiner-design.md  2026-03-04-docbiner-implementation.md
internal/apikey/: apikey.go  apikey_test.go  go.mod  go.sum
internal/auth/: go.mod  go.sum  jwt.go  jwt_test.go
internal/billing/: go.mod  stripe.go  stripe_test.go
internal/config/: config.go  config_test.go  go.mod
internal/database/: apikeys.go  apikeys_test.go  db.go  go.mod  go.sum  jobs.go  jobs_list.go  jobs_test.go  organizations.go  organizations_test.go  plans.go  templates.go  testhelper_test.go  users.go  users_test.go
internal/delivery/: go.mod  s3.go  s3_test.go  webhook.go  webhook_test.go
internal/domain/: go.mod  models.go
internal/pdfutil/: encrypt.go  encrypt_test.go  go.mod  go.sum  merge.go  merge_test.go
internal/queue/: go.mod  nats.go  nats_test.go
internal/renderer/: go.mod  options.go  pdf.go  pdf_test.go  renderer.go  screenshot.go  screenshot_test.go
internal/storage/: go.mod  minio.go  minio_test.go
migrations/: 000001_initial_schema.down.sql  000001_initial_schema.up.sql
monitoring/: alertmanager.yml  alerts.yml  docker-compose.monitoring.yml  prometheus.yml
sdks/python/: pyproject.toml
sdks/python/src/docbiner/: __init__.py  async_client.py  client.py  errors.py  types.py
sdks/python/tests/: test_client.py
(+97 files in other folders)
