[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docbiner"
version = "0.1.0"
description = "Official Python SDK for Docbiner HTML-to-PDF/Images API"
requires-python = ">=3.9"
dependencies = ["httpx>=0.27"]
license = {text = "MIT"}

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "respx>=0.22"]

[tool.setuptools.packages.find]
where = ["src"]
